--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -483,49 +483,20 @@ material_groups:
     - BLACK_BED
 
   - - WHITE_BANNER
-    - WHITE_WALL_BANNER
-
-  - - ORANGE_BANNER
-    - ORANGE_WALL_BANNER
-
-  - - MAGENTA_BANNER
-    - MAGENTA_WALL_BANNER
-
-  - - LIGHT_BLUE_BANNER
-    - LIGHT_BLUE_WALL_BANNER
-
-  - - YELLOW_BANNER
-    - YELLOW_WALL_BANNER
-
-  - - LIME_BANNER
-    - LIME_WALL_BANNER
-
-  - - PINK_BANNER
-    - PINK_WALL_BANNER
-
-  - - GRAY_BANNER
-    - GRAY_WALL_BANNER
-
-  - - CYAN_BANNER
-    - CYAN_WALL_BANNER
-
-  - - PURPLE_BANNER
-    - PURPLE_WALL_BANNER
-
-  - - BLUE_BANNER
-    - BLUE_WALL_BANNER
-
-  - - BROWN_BANNER
-    - BROWN_WALL_BANNER
-
-  - - GREEN_BANNER
-    - GREEN_WALL_BANNER
-
-  - - RED_BANNER
-    - RED_WALL_BANNER
-
-  - - BLACK_BANNER
-    - BLACK_WALL_BANNER
+    - ORANGE_BANNER
+    - MAGENTA_BANNER
+    - LIGHT_BLUE_BANNER
+    - YELLOW_BANNER
+    - LIME_BANNER
+    - PINK_BANNER
+    - GRAY_BANNER
+    - CYAN_BANNER
+    - PURPLE_BANNER
+    - BLUE_BANNER
+    - BROWN_BANNER
+    - GREEN_BANNER
+    - RED_BANNER
+    - BLACK_BANNER
 
   - - CREEPER_BANNER_PATTERN
     - MOJANG_BANNER_PATTERN
@@ -706,7 +677,8 @@ material_groups:
   - - SEAGRASS
     - SEA_PICKLE
   - - KELP
-    - KELP_BLOCK
+  - - DRIED_KELP
+    - DRIED_KELP_BLOCK
 
   - - CONDUIT
     - NAUTILUS_SHELL
